Add getFavoriteFacts() and saveFavoriteFact()

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,4 +7,6 @@
     <item android:id="@+id/searchFactsFragment"
         android:title="Search Facts"/>
 
+    <item android:id="@+id/saveFactFragment"
+        android:title="Save Facts"/>
 </menu>
