--- a/app/src/main/res/layout/save_fact_fragment.xml
+++ b/app/src/main/res/layout/save_fact_fragment.xml
@@ -9,15 +9,45 @@
     android:orientation="vertical"
     android:gravity="center">
 
+    <TextView
+        android:id="@+id/add_number_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:text="@string/add_number_title"
+        />
+
+    <EditText
+        android:id="@+id/number_input"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:inputType="number"
+        android:autofillHints=""
+        tools:ignore="LabelFor" />
+
+    <Button
+        android:id="@+id/button_id"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="@string/save_number"
+        android:layout_marginBottom="15dp"
+        />
+
+    <TextView
+        android:id="@+id/random_number_facts_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:text="@string/favorites_title" />
+
+
     <ListView
         android:id="@+id/fact_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="15dp"/>
 
-    <Button
-        android:id="@+id/button_id"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="@string/save" />
+
 </LinearLayout>
