Add minor fixes and update readme

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,5 +8,5 @@
         android:title="Search Facts"/>
 
     <item android:id="@+id/saveFactFragment"
-        android:title="Save Facts"/>
+        android:title="Favorite Numbers"/>
 </menu>
